# MyProject

glcs-to-glcp-migration-mainline/: .gitignore  README.md  dependency.py  export.sh  generate_spec.sh  pyproject.toml  pytest.ini  requirements.txt  users.json.old
glcs-to-glcp-migration-mainline/.github/workflows/: ci_pr.yaml
glcs-to-glcp-migration-mainline/automation/: conftest.py  logger.py  pytest.ini
glcs-to-glcp-migration-mainline/automation/ci/: setup-ccs-dev.sh  start-dev-env.sh
glcs-to-glcp-migration-mainline/automation/configs/local_tb_data/: aquila_settings.py  mira_settings.py  pavo_settings.py  polaris_settings.py  triton_lite_settings.py  user_creds.json
glcs-to-glcp-migration-mainline/automation/configs/pipeline_tb_data/: aquila_settings.py  gemini_settings.py  mira_settings.py  pavo_settings.py  triton_lite_settings.py
glcs-to-glcp-migration-mainline/automation/libs_local/acct_mgmt/helpers/: acct_mgmt_payload_constants.py  ui_am_create_new_user_new_acct_setup.py
glcs-to-glcp-migration-mainline/automation/libs_local/add/device_calls/: device_prov.py
glcs-to-glcp-migration-mainline/automation/libs_local/identity_access/: base.py  users.py
glcs-to-glcp-migration-mainline/automation/libs_local/utils/: aop_tokens.py
glcs-to-glcp-migration-mainline/automation/tests/glc_migration/: test.py  test_ankit_migration.py  test_migration.py  test_migration_karan.py  test_swetha_migration.py
glcs-to-glcp-migration-mainline/automation/updated_libs_local/metric_collector/: api_helper.py
glcs-to-glcp-migration-mainline/automation/updated_libs_local/utils/: sel_utils.py
glcs-to-glcp-migration-mainline/deploy/: automation-brigade-manifest.json
glcs-to-glcp-migration-mainline/docker/: Dockerfile
glcs-to-glcp-migration-mainline/scripts/: build-docker.sh  run-cd-dev.sh  run-cd.sh
(+229 files in other folders)
